feat: basic and advanced scope

--- a/Fancy-weather/src/index.html
+++ b/Fancy-weather/src/index.html
@@ -3,9 +3,78 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fancy-Weather</title>
 </head>
 <body>
-    <div id="root"></div>
+    <div id="root">
+        <!-- <div class="controls">
+            <div class="main-control">
+                <button class="refresh"><img src="./assets/images/refresh.png"></img></button>
+                <select class="language">
+                    <option>BE</option>
+                    <option>EN</option>
+                    <option>RU</option>
+                </select>
+                <div class="dimensions">
+                    <button class="farengate">°F</button>
+                    <button class="degree active">°C</button>
+                </div>
+            </div>
+            <div class="search-control">
+                <input type="search" class="search-text" placeholder="Search city or ZIP"/>
+                <img src="assets/images/microfon.png" class="voice" />
+                <button type="submit" class="search-button" >search</button>
+            </div>
+        </div>
+        <div class="main">
+            <div class="weather-info">
+                <div class="title">
+                    <p class="place">MINSK, BELARUS</p>
+                    <p class="date">Mon 28 October 17:23</p>
+                </div>
+                <div class="today">
+                    <div class="degree">10°</div>
+                    <div class="additional">
+                        <span>overcast</span>
+                        <span>feels like: 7°</span>
+                        <span>wind: 2 m/s</span>
+                        <span>humidity: 83%</span>
+                    </div>
+                </div>
+                <div class="days">
+                    <div class="day">
+                        <span class="day-name">Tuesday</span>
+                        <div class="degree-container">
+                            <span class="degree">7°</span>
+                            <img class="weather-icon" src="assets/images/weather.png" />
+                        </div>
+                    </div>
+                    <div class="day">
+                        <span class="day-name">Tuesday</span>
+                        <div class="degree-container">
+                            <span class="degree">7°</span>
+                            <img class="weather-icon" src="assets/images/weather.png"/>
+                        </div>
+                    </div>
+                    <div class="day">
+                        <span class="day-name">Tuesday</span>
+                        <div class="degree-container">
+                            <span class="degree">7°</span>
+                            <img class="weather-icon" src="assets/images/weather.png"/>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="weather-place">
+                <div class="map">
+
+                </div>
+                <div class="place-description">
+                    <p class="latitude">latitude: 53°54'</p>
+                    <p class="longitude">longitude: 27°34'</p>
+                </div>
+            </div>
+        </div> -->
+    </div>
 </body>
 </html>
